infrastructure/nginx-gateway-fabric/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: shared-gateway
  namespace: nginx-gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    metallb.universe.tf/loadBalancerIPs: ${METAL_LB_IP1}
spec:
  gatewayClassName: nginx
  listeners:
  # filebrowser - share.clusterian.pw
  - name: share-clusterian-pw-http
    hostname: ${FILEBROWSER_HOST}
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: share-clusterian-pw-https
    hostname: ${FILEBROWSER_HOST}
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: filebrowser-cert
  # plex - media.clusterian.pw
  - name: plex-http
    hostname: ${PLEX_HOST}
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: plex-https
    hostname: ${PLEX_HOST}
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: plex-cert
  # unifi - unifi.clusterian.pw
  - name: unifi-clusterian-pw-http
    hostname: ${UNIFI_HOST}
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: unifi-clusterian-pw-https
    hostname: ${UNIFI_HOST}
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: unifi-cert
  # quixit - quixit.us
  - name: quixit-us-http
    hostname: ${QUIXIT_HOST}
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: quixit-us-https
    hostname: ${QUIXIT_HOST}
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: quixit-cert
  # tufkin - auth.clusterian.pw
  - name: tufkin-http
    hostname: ${TUFKIN_HOST}
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: tufkin-https
    hostname: ${TUFKIN_HOST}
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: tufkin-cert
  # media tools - HTTP only (internal)
  - name: calibre-media-tools-http
    hostname: calibre.media.tools
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: media-tools-http
    hostname: media.tools
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: qbt-media-tools-http
    hostname: qbt.media.tools
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: soulseek-media-tools-http
    hostname: soulseek.media.tools
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
